# hetzner-robot-rs

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: rust.yml
src/: client.rs  hetzner.rs  main.rs
